update all units
new audio "sound file player"

--- a/_units/02.md
+++ b/_units/02.md
@@ -408,16 +408,8 @@ Ranges of hearing loss:
 
 ## Examples of Audiograms
 
-<html>
-  <head>
-    <title>The Auditory System</title>
-  </head>
-  <body>
-    <audio controls src="/MUTOR/assets/audios/audiogram.mp3">
-      Your browser does not support the audio element.
-    </audio>
-  </body>
-</html>
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/audiogram.mp3" gain="1.0" %}
+
 Demo Normal Hearing vs. High-Frequency Hearing loss (Source: `[Handbook for Acoustic Ecology (Barry Truax, 1999)](https://www.sfu.ca/sonic-studio-webdav/handbook/Audiogram.html)`)
 
 The first part of this sentence is played normally, whereas the second part is filtered so as to simulate the percept of an individual with high-frequency hearing loss.
