--- a/_units/03.md
+++ b/_units/03.md
@@ -744,26 +744,9 @@ If someone very far away screams, most listeners will judge the scream a being l
 
 Listen to the following examples; in the first example, you will hear someone speaking at a normal volume and in the second, you will hear a scream. Although the spoken voice is much quieter than the scream, we are still able to tell that one is louder than the other.
 
-<html>
-  <head>
-    <title>Larry</title>
-  </head>
-  <body>
-    <audio controls src="/MUTOR/assets/audios/unit3_larry1.wav">
-      Your browser does not support the audio element.
-    </audio>
-  </body>
-</html>
-<html>
-  <head>
-    <title>Psycho1</title>
-  </head>
-  <body>
-    <audio controls src="/MUTOR/assets/audios/unit3_Psycho1.wav">
-      Your browser does not support the audio element.
-    </audio>
-  </body>
-</html>
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/unit3_larry1.wav" gain="1.0" %}
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/unit3_Psycho1.wav" gain="1.0" %}
+
 
 An interesting experiment was carried out at the Center for New Music and Audio Technologies (CNMAT) at UC Berkeley. Two speakers were set up as in figure 5—one farther away from the listeners than the other. On top of each speaker was a light and a third speaker was hidden from the listeners. The listeners were asked to write down which speaker the sounds came from; although the sounds all came from the hidden speaker, the lights of the other two speakers would turn on giving the listeners the impression that the speaker with the light on had made the sound. In this case, although all of the sounds that the listeners heard were the same and originated from the same source, the listeners were fooled by the visual information they were receiving. This illustrates the strength that the visual system can have over the auditory system in the way that we perceive the world around us.
 
@@ -880,29 +863,14 @@ One example of top-down knowledge is the understanding of a musical allusion - i
 
 
 Children's song "Frère Jacques"
-<html>
-  <head>
-    <title>Larry</title>
-  </head>
-  <body>
-    <audio controls src="/MUTOR/assets/audios/unit3_Frere_Jacques.mp3">
-      Your browser does not support the audio element.
-    </audio>
-  </body>
-</html>
+
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/unit3_Frere_Jacques.mp3" gain="1.0" %}
+
 
 The opening measures of Mahler's Symphony No. 1 in D, "Titan", 3rd movement.
 
-<html>
-  <head>
-    <title>Larry</title>
-  </head>
-  <body>
-    <audio controls src="/MUTOR/assets/audios/unit3_mahler1.mp3">
-      Your browser does not support the audio element.
-    </audio>
-  </body>
-</html>
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/unit3_mahler1.mp3" gain="1.0" %}
+
 
 {% comment %}
 
@@ -976,16 +944,8 @@ The Clifton Effect is a change to the classical Precedence Demonstration. This c
 (image source: http://www.parmly.luc.edu/parmly/clifton.html)
 In the Clifton demonstration the two clicks are always seperated by 12 ms and the click pairs are presented at a rate of about 3 per second.
 
-<html>
-  <head>
-    <title>clifton</title>
-  </head>
-  <body>
-    <audio controls src="/MUTOR/assets/audios/unit3_clifton.wav">
-      Your browser does not support the audio element.
-    </audio>
-  </body>
-</html>
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/unit3_clifton.wav" gain="1.0" %}
+
 
 Clifton Effect Demonstration (requires stereo headphones)
 (source: http://www.parmly.luc.edu/parmly/clifton.html)
