--- a/_units/04.md
+++ b/_units/04.md
@@ -137,17 +137,9 @@ inner or upper voices is considered consonant and needs no special treatement.
 description="In common practice tonality, a fourth between the bottom voices 
 is dissonant, while one in the inner voices is consonant." width="300px" %}
 
-{% include begin-figure description="C major chord 2 inv." %}
-<audio controls>
-<source src="/MUTOR/assets/audios/Cmaj_2inv.wav" type="audio/mpeg">
-</audio>
-{% include end-figure %}
 
-{% include begin-figure description="C major chord 2 inv." %}
-<audio controls>
-<source src="/MUTOR/assets/audios/Cmaj_1inv.wav" type="audio/mpeg">
-</audio>
-{% include end-figure %}
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/Cmaj_2inv.wav" gain="1.0" %}
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/Cmaj_1inv.wav" gain="1.0" %}
 
 This suggests that context matters, and the attribution of "dissonant" or
 "consonant" to an interval, the physical, sounding object, 
@@ -340,21 +332,11 @@ chord from Arnold Schoenberg's work *Farben*, Op. 16.
 description="Roughness estimates for three orchestrations of the same
 harmony from Arnold Schoenberg's Farben, Op. 16." width="400px" %}
 
-{% include begin-figure description="Farben, first orchestration" %}
-<audio controls>
-<source src="/MUTOR/assets/audios/farben-orch1.mp3" type="audio/mpeg">
-</audio>
-{% include end-figure %}
-{% include begin-figure description="Farben, second orchestration" %}
-<audio controls>
-<source src="/MUTOR/assets/audios/farben-orch2.mp3" type="audio/mpeg">
-</audio>
-{% include end-figure %}
-{% include begin-figure description="Farben, sine tones" %}
-<audio controls>
-<source src="/MUTOR/assets/audios/farben-sin.mp3" type="audio/mpeg">
-</audio>
-{% include end-figure %}
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/farben-orch1.mp3" gain="1.0" %}
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/farben-orch2.mp3" gain="1.0" %}
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/farben-sin.mp3" gain="1.0" %}
+
+
 
 As can be seen in figure {{ fignum }}, and heard in the audio examples, 
 the sonority is quite smooth when played with pure tones, however, the two
@@ -382,11 +364,9 @@ to estimate the overall roughness of a sonority will not provide a good
 model. An example can be found in the opening sonority of Gy&ouml;rgy
 Ligeti's *Atmosph&egrave;res*, which is a massive cluster of semitones
 spanning a large part of the orchestral range. 
-{% include begin-figure description="Ligeti, Atmosph&egrave;res." %}
-<audio controls>
-<source src="/MUTOR/assets/audios/atmospheres.mp3" type="audio/mpeg">
-</audio>
-{% include end-figure %}
+
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/atmospheres.mp3" gain="1.0" %}
+
 If our simple additive model
 of roughness held, this should be an extremely dissonant chord, where in fact
 the experience of it is as quite a smooth sonority. This is likely due to 
@@ -408,21 +388,13 @@ description="Closeup of two sinusoids at 440 Hz and 466.1638 Hz." %}
 {% include img-figure url="/MUTOR/assets/images/minor_second_cluster_closeup.png"
 description="Closeup of 40 sinusoids between 440 Hz and 466.1638 Hz." %}
 
-{% include begin-figure description="Ligeti, Atmosph&egrave;res." %}
-<audio controls>
-<source src="/MUTOR/assets/audios/atmospheres.mp3" type="audio/mpeg">
-</audio>
-{% include end-figure %}
-{% include begin-figure description="Two sine tones: 440 Hz and 466.1638 Hz (minor second)." %}
-<audio controls>
-<source src="/MUTOR/assets/audios/m2.mp3" type="audio/mpeg">
-</audio>
-{% include end-figure %}
-{% include begin-figure description="40 sine tones at random frequencies and phases between 440 Hz and 466.1638 Hz (minor second)." %}
-<audio controls>
-<source src="/MUTOR/assets/audios/cluster.mp3" type="audio/mpeg">
-</audio>
-{% include end-figure %}
+{% comment %}
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/atmospheres.mp3" gain="1.0" %}
+{% endcomment %}
+
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/m2.mp3" gain="1.0" %}
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/cluster.mp3" gain="1.0" %}
+
 
 
 Figure {{ fignum }} presents two waveforms, one containing a sum of two 
