--- a/_units/05.md
+++ b/_units/05.md
@@ -58,33 +58,27 @@ The following are four tones with differing numbers of partials, but with the sa
 
 {% include img-figure url="/MUTOR/assets/images/440pure.png" description="Pure tone at 440Hz" %}
 <div align="center">
-<audio controls src="/MUTOR/assets/audios/unit5_440pure.wav">
-Your browser does not support the audio element.
-</audio>
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/unit5_440pure.wav" gain="1.0" %}
 </div>
+
 {% include img-figure url="/MUTOR/assets/images/440x2complex.png" description="Two-tone complex with fundamental frequency of 440Hz" %}
 <div align="center">
-<audio controls src="/MUTOR/assets/audios/unit5_440x2complex.wav">
-Your browser does not support the audio element.
-</audio>
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/unit5_440x2complex.wav" gain="1.0" %}
 </div>
+
 {% include img-figure url="/MUTOR/assets/images/440x3complex.png" description="Three-tone complex with F0 of 440Hz" %}
 <div align="center">
-<audio controls src="/MUTOR/assets/audios/unit5_440x3complex.wav">
-Your browser does not support the audio element.
-</audio>
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/unit5_440x3complex.wav" gain="1.0" %}
 </div>
+
 {% include img-figure url="/MUTOR/assets/images/440x4complex.png" description="Four-tone complex with F0 of 440Hz" %}
 <div align="center">
-<audio controls src="/MUTOR/assets/audios/unit5_440x4complex.wav">
-Your browser does not support the audio element.
-</audio>
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/unit5_440x4complex.wav" gain="1.0" %}
 </div>
+
 {% include img-figure url="/MUTOR/assets/images/440x3virtual.png" description="Three-tone complex with missing fundamental of 440Hz" %}
 <div align="center">
-<audio controls src="/MUTOR/assets/audios/unit5_440x3virtual.wav">
-Your browser does not support the audio element.
-</audio>
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/unit5_440x3virtual.wav" gain="1.0" %}
 </div>
 
 The fundamental frequency of a sound is also known as its periodicity pitch, and is shorthanded as F0.
