--- a/_units/06.md
+++ b/_units/06.md
@@ -127,10 +127,14 @@ bin $$n$$, respectively.
 
 {% include img-figure url="/MUTOR/assets/images/tpt.ff.A4_spec.png" description="The spectrum of a trumpet playing A4 (440 Hz) <em>fortissimo</em>. The red line shows the spectral centroid. Compare with the figure below to see how it moves when the same note is played quieter." width="500px" %}
 {% assign fig-tpt-ff = fignum %}
-<audio controls><source src="/MUTOR/assets/audios/tpt.ff.A4.mp3" type="audio/mpeg"></audio>
+
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/tpt.ff.A4.mp3" gain="1.0" %}
+
 {% include img-figure url="/MUTOR/assets/images/tpt.pp.A4_spec.png" description="The spectrum of a trumpet playing A4 (440 Hz) <em>pianissimo</em>. The red line shows the spectral centroid. Compare with the figure above to see how it moves when the same note is played louder." width="500px" %}
 {% assign fig-tpt-pp = fignum %}
-<audio controls><source src="/MUTOR/assets/audios/tpt.pp.A4.mp3" type="audio/mpeg"></audio>
+
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/tpt.pp.A4.mp3" gain="1.0" %}
+
 Figures {{ fig-tpt-ff }} and {{ fig-tpt-pp }} both show the spectrum of
 a trumpet playing A4 (440 Hz), the top *fortissimo*, and the bottom 
 *pianissimo*. When played *fortissimo*, the spectral centroid is well
@@ -383,14 +387,14 @@ the spectra of two cellos playing a low major 3rd (Gb-Bb), with that of
 two bassoons playing the same interval.
 {% include img-figure url="/MUTOR/assets/images/Cellos_G2B2.png" description="Spectra of two cellos playing G2 and B2." width="500px" %}
 {% assign cellos_thirds = fignum %}
-<audio controls>
-<source src="/MUTOR/assets/audios/cello.mf.G2-B2.mp3" type="audio/mpeg">
-</audio>
+
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/cello.mf.G2-B2.mp3" gain="1.0" %}
+
 {% include img-figure url="/MUTOR/assets/images/Bassoons_G2B2.png" description="Spectra of twy bassoons playing G2 and B2, the same interval as above. Note the tightly spaced partials pointed to by the arrows." width="500px" %}
 {% assign bassoons_thirds = fignum %}
-<audio controls>
-<source src="/MUTOR/assets/audios/Bassoon.mf.G2-B2.mp3" type="audio/mpeg">
-</audio>
+
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/Bassoon.mf.G2-B2.mp3" gain="1.0" %}
+
 In figure {{ bassoons_thirds }}, the peaks that surround the one at 500 Hz are 
 strong, and slightly mistuned, resulting in a perceptually dissonant
 version of what should be a functionally consonant interval. In figure
@@ -405,12 +409,10 @@ explored in a melodic fashion by Arnold Schoneberg in the third
 of his *F&uuml;nf Orchesterst&uuml;ke, Op. 16*, which opens by
 alternating between two different orchestrations of the same chord:
 {% include img-figure url="/MUTOR/assets/images/farbenex_orch.png" description="The two orchestrations of the opening chord of Schoenberg's <em>Farben</em>." width="400px" %}
-<audio controls>
-<source src="/MUTOR/assets/audios/farben-orch1.mp3" type="audio/mpeg">
-</audio>
-<audio controls>
-<source src="/MUTOR/assets/audios/farben-orch2.mp3" type="audio/mpeg">
-</audio>
+
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/farben-orch1.mp3" gain="1.0" %}
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/farben-orch2.mp3" gain="1.0" %}
+
 The title of this 
 short piece, *Farben* is German for *color*, and the term
 *Klangfarben*, or *tone color* can be translated as *timbre*. 
@@ -421,9 +423,9 @@ Building on the discussion in the beginning of this section,
 MacCallum and Einbond showed {% include cite ref="maccallum_roughness" %}
 that the choice of these two orchestrations are significantly different
 from each other, and from a "pure" sine-tone rendering. 
-<audio controls>
-<source src="/MUTOR/assets/audios/farben-sin.mp3" type="audio/mpeg">
-</audio>
+
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/farben-sin.mp3" gain="1.0" %}
+
 The notes of the
 chord are generally well outside the critical band from one another, and
 as we saw in unit XX, {% include note author="jm" text="link to unit" %},
