--- a/_units/07.md
+++ b/_units/07.md
@@ -89,12 +89,11 @@ With respect to rhythm, performances of music are often considered cold and lack
 
 mechanical timing
 
-<audio controls src="/MUTOR/assets/audios/Traumerei_scoretime.mp3"> </audio>
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/Traumerei_scoretime.mp3" gain="1.0" %}
 
 expressive timing
 
-<audio controls src="/MUTOR/assets/audios/unit7_Schumann-Traeumerei.mp3"> </audio>
-
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/unit7_Schumann-Traeumerei.mp3" gain="1.0" %}
 
 (source: Penel & Drake, 2000. Rhythm in music performance and perceived structure. In Desain & Windsor, Ed.)
 
