--- a/_units/08.md
+++ b/_units/08.md
@@ -70,16 +70,7 @@ The Thatcher illusion is based on the same principle:
 
 An example in the auditory domain would be the reversed sound of a cymbal, a familiar sonority in popular music, which has a distict quality while still betraying its origin.
 
-<html>
-  <head>
-    <title>The Auditory System</title>
-  </head>
-  <body>
-    <audio controls src="/MUTOR/assets/audios/unit8_Reverse-Crash-Cymbal.wav">
-      Your browser does not support the audio element.
-    </audio>
-  </body>
-</html>
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/unit8_Reverse-Crash-Cymbal.wav" gain="1.0" %}
 
 # Perceptual Completion
 Perceptual Completion of incomplete information (e.g., blind spot or TV noise experiments). Top-down in addition to bottom-up processes, based on experience. Computers have difficulty to deal with ambiguity for lack of visual knowledge.
@@ -89,17 +80,7 @@ In the example on the left, as with any reason, the elongated object continues u
 {% include img-figure url="/MUTOR/assets/images/unit8_completion-1.jpg" description="Perceptual completion" %}
 {% include img-figure url="/MUTOR/assets/images/unit8_completion-2.jpg" description="We assume objects to continue when parts of it are hidden behind another object" width="350px" %}
 
-<html>
-  <head>
-    <title>unscrambled melody</title>
-  </head>
-  <body>
-    <audio controls src="/MUTOR/assets/audios/unit8_perceptualcompletion.wav">
-      Your browser does not support the audio element.
-    </audio>
-  </body>
-</html>
-
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/unit8_perceptualcompletion.wav" gain="1.0" %}
 
 # Reification: Subjective Contour
 A similar phenomenon is the _subjective contour_. It is difficult not to see that white triangle, though it does not actually exist. This phenomenon is related to virtual pitch, apparent in low-bandwidth phone calls and strinking pitch of bells. The principle behind subjective contour is referred to as _reification_: "The error of treating something that is not concrete, such as an idea, as a concrete thing." (https://en.wikipedia.org/wiki/Reification_(fallacy))
@@ -157,28 +138,10 @@ Thus, the contour of the Entertainer melody can be represented as:
 Contour is shown to be very important to the perception of melody. Deutsch (2003) demonstrates that when the contour of a melody is intact, melodies can be heard even if the pitches themselves are incorrect. (This explains why a tune is often still recognizable even when performed grossly out of tune.) If the contour is disrupted, then the melodic recognition is impaired, even when the pitch classes are retained.
 The following demonstration (from Deutsch's 2003 CD Musical Illusions and Paradoxes) illustrates the importance of melodic contour. In the first sound file, a familiar melody is played in the correct pitch classes but in scrambled octaves, such that the melodic contour is disrupted. Can you recognize the melody?
 
-<html>
-  <head>
-    <title>Scrambled melody</title>
-  </head>
-  <body>
-    <audio controls src="/MUTOR/assets/audios/unit8_scrambledmelody.wav">
-      Your browser does not support the audio element.
-    </audio>
-  </body>
-</html>
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/unit8_scrambledmelody.wav" gain="1.0" %}
 scrambled melody
 
-<html>
-  <head>
-    <title>unscrambled melody</title>
-  </head>
-  <body>
-    <audio controls src="/MUTOR/assets/audios/unit8_unscrambledmelody.wav">
-      Your browser does not support the audio element.
-    </audio>
-  </body>
-</html>
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/unit8_unscrambledmelody.wav" gain="1.0" %}
 original melody
 
 ## Implication Realization Model
@@ -220,16 +183,8 @@ Countless famous musical examples can illustrate the gap-fill principle. For ins
 The idea of gap-fill most closely borrows from Gestalt theories in perception, which are a set of theories on how units are perceived as a whole. The Gestalt principles of similarity, proximity, good continuation, symmetry, and closure, originally used in vision, are important also for perceiving melodies as holistic, unified objects.
 
 Demonstration from ASA CD: Segregation Of A Melody From Interfering Tones This demo shows the principle of proximity: pitches close together in register tend to be grouped together.
-<html>
-  <head>
-    <title>unscrambled melody</title>
-  </head>
-  <body>
-    <audio controls src="/MUTOR/assets/audios/unit8_05-Segregation-Of-A-Melody-From-Interfering-Tones.mp3">
-      Your browser does not support the audio element.
-    </audio>
-  </body>
-</html>
+
+{% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/unit8_05-Segregation-Of-A-Melody-From-Interfering-Tones.mp3" gain="1.0" %}
 
 ## Hidden Markov Models
 
