--- a/_units/09.md
+++ b/_units/09.md
@@ -50,17 +50,7 @@ The distinction between harmony and harmonic progression is an important one.  C
 In the key of C major, this chord has a feeling of stability since it is the tonic of the key.  However, in the key of F major, the same chord will sound less stable as if it should move to F. As we can see, the context in which a chord appears is important. Another example is the famous "Tristan chord"—the opening harmony of Richard Wagner's opera Tristan und Isolde (figure 9.3).  The nature of this sonority has been debated for decades, but the debate centers less around the chord itself, and more around the function and way in which it resolves.
 
 {% include img-figure url="/MUTOR/assets/images/unit9_tristan.png" description="Tristan Prelude" %}
-
-<html>
-  <head>
-    <title>The Auditory System</title>
-  </head>
-  <body>
-    <audio controls src="/MUTOR/assets/audios/unit9_Tristan_Chord.wav">
-      Your browser does not support the audio element.
-    </audio>
-  </body>
-</html>
+{% include p/xwaveform-spectroscope-small src=" /MUTOR/assets/audios/unit9_Tristan_Chord.wav" gain="1.0" %}
 
 The chord can easily be explained as a half-diminished seventh chord or as a French augmented 6th chord where the G# is an appoggiatura  to the A, however, the way in which it resolves calls these labels into question.
 
@@ -89,16 +79,7 @@ and in just intonation,
 
 An important technique that defines common practice music is the modulation to distant keys.  As the harmony moves away from the home key, tension increases, however, in a tuning system where the tonic key is tuned near just intonation and the degree to which a key is out of tune increases with the distance from the home key, modulation to distant keys results in a higher level of tension.  In the following listening example, you will hear the first minute of a Capriccio (FbWV 506) by Johann Jakob Froberger (1616-1667) played on an organ tuned to meantone temperament). In the second listening example, you will hear the same passage, but played in equal temperament.
 
-<html>
-  <head>
-    <title>The Auditory System</title>
-  </head>
-  <body>
-    <audio controls src="/MUTOR/assets/audios/unit9_froberger-capriccioInCmaj.mp3">
-      Your browser does not support the audio element.
-    </audio>
-  </body>
-</html>
+{% include p/xwaveform-spectroscope-small src=" /MUTOR/assets/audios/unit9_froberger-capriccioInCmaj.mp3" gain="1.0" %}
 
 Listening example 1. The first minute of Capriccio (FbWV 506) by Johann Jakob Froberger played on an organ in meantone temperament.
 
@@ -146,16 +127,7 @@ Via enharmonic equivalence, equal temperament adds another dimension to modulati
 
 {% include img-figure url="/MUTOR/assets/images/unit9_Schubert-Der-Neugierige.png" description="Franz Schubert: Der Neugierige mm.35-46. The first marked area features the second inversion of the secondary dominant seventh chord on G resolving to the subdominant C in the key of G major. The second marked area features the German 6th chord, with the F respelled as E# resolving to the cadential 6-4 chord in B major." %}
 
-<html>
-  <head>
-    <title>The Auditory System</title>
-  </head>
-  <body>
-    <audio controls src="/MUTOR/assets/audios/unit9_Der_Neugierige.wav">
-      Your browser does not support the audio element.
-    </audio>
-  </body>
-</html>
+{% include p/xwaveform-spectroscope-small src=" /MUTOR/assets/audios/unit9_Der_Neugierige.wav" gain="1.0" %}
 
 {% include img-figure url="/MUTOR/assets/images/unit9-Ambiguous-Cubes-Illusion.jpg" description="Ambiguous Cubes Illusion" %}
 
@@ -229,18 +201,9 @@ Odd integer frequency ratios arise in the spectrum of the clarinet, which is one
 
 A CD released by the HfMT in 2020 also contains an arrangement of a piano composition, Vers la flamme, by Alexander Scriabin for Bohlen-Pierce ensemble. Scriabin's harmonic language in his last period focusses on the minor-third circle and tritone relationships as a replacement for Western functional harmony. As the Bohlen-Pierce scale features the consonant tritone (7/5) and minor third (25/21), composed of four or two scale steps, resp., it provides an ideal harmonic framework for such an endeavour.
 
-<html>
-  <head>
-    <title>The Auditory System</title>
-  </head>
-  <body>
-    <audio controls src="/MUTOR/assets/audios/unit9_Scriabin_Hajdu_ Burnig Petrol.mp3">
-      Your browser does not support the audio element.
-    </audio>
-  </body>
-</html>
+{% include p/xwaveform-spectroscope-small src=" /MUTOR/assets/audios/unit9_Scriabin_Hajdu_ Burnig Petrol.mp3" gain="1.0" %}
 
-Listening example ?. Burning Petrol, an arrangement of the piano poem Vers la flamme by Alexander Scriabin for Bohlen-Pierce ensemble.
+Burning Petrol, an arrangement of the piano poem Vers la flamme by Alexander Scriabin for Bohlen-Pierce ensemble.
 
 #### Bohlen-Pierce Microtonality
 As the equal-tempered step size of the Bohlen-Pierce scale is 146.3 cents, it is often referred to as a _macrotonal_ scale, implying that its step size is larger than a semitone. But just like semitones of the chromatic scale, the Bohlen-Pierce scale can also be devided into smaller fractions. Two microtonal scales stand out: The Bohlen-Pierce triple scale dividing the BP step into 3 and the Bohlen-Pierce quintuple scale dividing the BP step into 5. Serendipitously, the resulting step size (1902 / (13 * 5) = 29.262 cents) is nearly identical to 41TET (1200 / 41 = 29.268 cents). We can therefore consider the Bohlen-Pierce a subset of 41TET. This fact has far-reaching implications which have barely been exploited by composers and theorists.
