--- a/_units/10.md
+++ b/_units/10.md
@@ -49,11 +49,10 @@ Some quotes on expectancy, expectation, and anticipation:
 
 Here is an example of three different conditions of expectancy in music. Listen to the following three clips of music. Which one sounds the most expected? Which one sounds most unexpected?
 
-<audio controls src="/MUTOR/assets/audios/unit10_Cmandemo.wav"> </audio>
+{% include p/xwaveform-spectroscope-small src=" /MUTOR/assets/audios/unit10_Cmandemo.wav" gain="1.0" %}
+{% include p/xwaveform-spectroscope-small src=" /MUTOR/assets/audios/unit10_CmaD3demo.wav" gain="1.0" %}
+{% include p/xwaveform-spectroscope-small src=" /MUTOR/assets/audios/unit10_CmaD5demo.wav" gain="1.0" %}
 
-<audio controls src="/MUTOR/assets/audios/unit10_CmaD3demo.wav"> </audio>
-
-<audio controls src="/MUTOR/assets/audios/unit10_CmaD5demo.wav"> </audio>
 
 # Why do we study expectation?
 
@@ -92,12 +91,14 @@ socks.
 The word "socks" at the end of the sentence is a violation of expectations. Your knowledge of the world, and of the English language, has equipped you with a strong set of expectations that a) "socks" does not form a good ending to the sentence, and b) coffee does not taste good when taken with socks.
 
 Expectations also play a strong role in our perception and cognition of music. When listening to music, one necessarily forms expectations for sounds that are about to occur next. Consider the following example: 
- 
+
+Listen to the original melody: 
+{% include p/xwaveform-spectroscope-small src=" /MUTOR/assets/audios/unit10_twinkle1.mp3" gain="1.0" %}
+
 What would you expect to hear next?
-1.   <audio controls src="/MUTOR/assets/audios/unit10_twinkle1.mp3"></audio>
-2.   <audio controls src="/MUTOR/assets/audios/unit10_twinkle2.mp3"></audio>
-3.   <audio controls src="/MUTOR/assets/audios/unit10_twinkle3.mp3"></audio>
-4.   <audio controls src="/MUTOR/assets/audios/unit10_twinkle4.mp3"></audio>
+{% include p/xwaveform-spectroscope-small src=" /MUTOR/assets/audios/unit10_twinkle2.mp3" gain="1.0" %}
+{% include p/xwaveform-spectroscope-small src=" /MUTOR/assets/audios/unit10_twinkle3.mp3" gain="1.0" %}
+{% include p/xwaveform-spectroscope-small src=" /MUTOR/assets/audios/unit10_twinkle4.mp3" gain="1.0" %}
 
 While 1 seems to be the most obviously expected answer, 2 was the more artistically interesting, albeit slightly unexpected. Choice 2 was in fact used in the actual recording of Mozart's Twinkle Twinkle Little Star Variations. This example shows that it is the slight variations, the slight manipulations of expectations, that we find most interesting and artistically appealing. Thus, the ability to form expectations has been proposed as the source of emotion and meaning in music (Meyer, 1956).
 
