--- a/_units/08.md
+++ b/_units/08.md
@@ -78,14 +78,14 @@ Perceptual Completion of incomplete information (e.g., blind spot or TV noise ex
 In the example on the left, as with any reason, the elongated object continues under the round disk. Even infants make such assumptions and are surprised if they do not apply.
 
 {% include img-figure url="/MUTOR/assets/images/unit8_completion-1.jpg" description="Perceptual completion" %}
-{% include img-figure url="/MUTOR/assets/images/unit8_completion-2.jpg" description="We assume objects to continue when parts of it are hidden behind another object" width="350px" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_completion-2.jpg" description="We assume objects to continue when parts of it are hidden behind another object" width="600px" %}
 
 {% include p/xwaveform-spectroscope-small src="/MUTOR/assets/audios/unit8_perceptualcompletion.wav" gain="1.0" %}
 
 # Reification: Subjective Contour
 A similar phenomenon is the _subjective contour_. It is difficult not to see that white triangle, though it does not actually exist. This phenomenon is related to virtual pitch, apparent in low-bandwidth phone calls and strinking pitch of bells. The principle behind subjective contour is referred to as _reification_: "The error of treating something that is not concrete, such as an idea, as a concrete thing." (https://en.wikipedia.org/wiki/Reification_(fallacy))
 
-{% include img-figure url="/MUTOR/assets/images/unit8_Kinazsa_Triangle.png" description="Subjective contour" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_Kinazsa_Triangle.png" description="Subjective contour" width="300px" %}
 
 # Figure-Ground Organization
 Figure-ground organization is a Gestalt principle depicts our ability to make out a figure in front of a background. We tend to perceive as figures those parts of our perceptual fields that are convex, symmetric, small, and enclosed. The [figure–ground vase illusion](https://en.wikipedia.org/wiki/Rubin_vase) arises when the visual information given is ambiguous. In the figure below, a low quality, black and white photo of a dalmatian dog. The viewer first has to use perceptual completion to recognize the outlines of the dog against the background which could be interpreted as an overexposed scene in a park. Once the viewer has successfully analysed the scene, he or she will identify the dog much more quickly when shown the image again. Bregman has coined the term _auditory scene analysis_ to denote processes in the auditory domain analogous to figure-ground organization and perceptual grouping.
@@ -113,7 +113,7 @@ The dots that are closer together are perceived as being grouped together.
 {% include img-figure url="/MUTOR/assets/images/unit8_goodcontinuation.png" description="Principle of good continuation" width="400px" %}
 ## Closure
 - we tend to see complete figures despite missing parts.
-{% include img-figure url="/MUTOR/assets/images/unit8_Gestalt_closure.png" description="Principle of closure" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_Gestalt_closure.png" description="Principle of closure" width="400px"%}
 ## Common fate
 - elements that change similarly over time tend to be grouped together.
 {% include img-figure url="/MUTOR/assets/images/unit8_Common-Fate.gif" description="Principle of common fate" %}
@@ -219,7 +219,7 @@ Here are some examples of the way melodies fit in each corner of the texture spa
 {% include img-figure url="/MUTOR/assets/images/unit8_texture-4.png" description="Polyphony" width="300px" %}
 To fit all four kinds of melodic textures onto the texture space:
 
-{% include img-figure url="/MUTOR/assets/images/unit8_texture-space.png" description="Texture Space" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_texture-space.png" description="Texture Space" width="400px"%}
 
 This texture space may be used to predict different musical styles. Different genres of music tend to occupy distinct areas of texture space, as shown below:
 
