--- a/_units/10.md
+++ b/_units/10.md
@@ -205,7 +205,16 @@ Some typical profiles are shown here (see also sections 6 and 7 in Unit 5: Pitch
 {% include img-figure url="/MUTOR/assets/images/unit10_probetoneprofiles1.png" description="Probe Tone profiles1" width="500px" %}
 (image source: Krumhansl, 1990)
 
+{% include p/begin %}
+{% assign ptsynthname = mutor_patch_pfx | append: "ptsynth" %}
+
+{% include p/ptsynth name=ptsynthname %}
+
+{% include p/end %}
+
+{% comment %}
 {% include img-figure url="/MUTOR/assets/images/unit10_probetonemaxpatch.png" description="Probe Tone Max Patch" %}
+{% endcomment %}
 
 Notice that when the melodies given to the subjects are in related keys (e.g. C major and a minor scales, as shown in the top panel), the average ratings are highly correlated. In contrast, in response to melodies in unrelated keys such as C major and F# major (bottom panel), the correlations between rating profiles are low, or even negatively correlated. 
 
