update units 2, 3 and 5
include youtube videos from the MUTOR channel

--- a/_units/02.md
+++ b/_units/02.md
@@ -35,6 +35,12 @@ mathjax: true
 
 # How do we hear?
 
+<div style="display: block; text-align: center; float: center">
+<iframe width="560" height="315" src="https://www.youtube.com/watch?v=_CqDEiHh79Q" 
+frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; 
+picture-in-picture" allowfullscreen></iframe>
+</div>
+
 Much of our auditory and musical functions arise from the anatomical structures of our brain and auditory system. To understand the physiological bases of musical phenomena, this unit will provide an in-depth overview of the structure and function of the auditory system.
 
 The auditory system is a set of biological structures and functions that enable you to hear. To understand this system, we will follow the pathway that sound travels from the outer ear to the cochlea. We will discuss how the cochlea transforms sound into neural impulses, which are then to be relayed in various transformations through the neural centers of the brainstem and midbrain before it is processed by the primary and secondary auditory cortices.
